Breathe: Prevent ToC current heading indicator from overlapping the heading and link icon.
Props aezazshekh, coffee2code.
Fixes #6547.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@12139 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
@@ -1319,11 +1319,17 @@ h2.toc-heading + h3.toc-heading:target {
 .toc-heading:target:before {
 	content: '';
 	position: absolute;
-	left: -10px;
+	left: -40px;
 	top: 50px;
 	border-left: 5px solid #0073aa;
 	height: 50%;
 	height: calc(100% - 50px);
+}
+
+@media(max-width: 876px) {
+	.toc-heading:target:before {
+		left: -10px;
+	}
 }
 
 .toc-jump {
